compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funEquals.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
fun foo() =<!SYNTAX!><!>
